<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.example.naversearch.category.Blog" />

        <variable
            name="model"
            type="com.example.naversearch.model.NaverViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_blog"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="@string/blog_hint"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_blog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() ->model.search(fragment.BLOG_TYPE, fragment.BLOG_CATEGORY, etBlog.getText().toString(), fragment.context,rvBlog)}"
                android:text="@string/search"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btn_blog_get"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:onClick="@{() -> model.lookUp(fragment.BLOG_TYPE,fragment.context,rvBlog)}"
                android:text="@string/read"
                android:textSize="13sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_blog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="LinearLayoutManager" />
    </LinearLayout>
</layout>